simple-service/istio-service.yaml
---
# Source: istio-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
  namespace: services
  labels:
    app: simple-service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: simple-service
  ports:
  - name: http
    port: 80
---
# Source: istio-service/templates/deployment.yaml

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: simple-service-canary
  namespace: services
  labels:
    app: simple-service
    version: canary
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundIPRanges: 0.0.0.0/0
      labels:
        app: simple-service
        version: canary
    spec:
      containers:
      - name: simple-service
        image: timfpark/simple-service:441
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 80
          protocol: TCP

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: simple-service-stable
  namespace: services
  labels:
    app: simple-service
    version: stable
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundIPRanges: 0.0.0.0/0
      labels:
        app: simple-service
        version: stable
    spec:
      containers:
      - name: simple-service
        image: timfpark/simple-service:440
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 80
          protocol: TCP

---
# Source: istio-service/templates/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simple-service
  namespace: services
  labels:
    app: simple-service
spec:
  host: "simple-service.services.svc.cluster.local"
  subsets:
  - name: canary
    labels:
      version: canary
  - name: stable
    labels:
      version: stable
---
# Source: istio-service/templates/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-service
  namespace: services
  labels:
    app: simple-service
spec:
  gateways:
  - my-ingress.istio-system.svc.cluster.local
  hosts:
  - simple.mycompany.io
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination:
          host: "simple-service.services.svc.cluster.local"
          subset: canary
          port:
            number: 80
        weight: 10
      - destination:
          host: "simple-service.services.svc.cluster.local"
          subset: stable
          port:
            number: 80
        weight: 90
